--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -1,1 +1,7 @@
-<p>top-bar works!</p>
+<div class="main-bg flex align-center justify-spread pad-x-20 pad-y-15">
+  <span></span>
+  <span class="font-white bold font-xl">Not Zillow.com</span>
+  <button mat-button (click)="(1)">
+    <span class="font-white">Sign Out</span>
+  </button>
+</div>
