--- a/src/styles.scss
+++ b/src/styles.scss
@@ -84,8 +84,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     overflow-x: auto;
 }
 
-.pink-bg {
-    background-color: rgb(255, 64, 129);
+.main-bg {
+    background-color: rgb(14, 124, 158);
 }
 
 @mixin generate-spacing ($upper-limit) {
