Login with route guard

--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -1,7 +1,7 @@
 <div class="main-bg flex align-center justify-spread pad-x-20 pad-y-15">
   <span></span>
   <span class="font-white bold font-xl">Not Zillow.com</span>
-  <button mat-button (click)="(1)">
+  <button mat-button (click)="authService.logout()">
     <span class="font-white">Sign Out</span>
   </button>
 </div>
