--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,2 +1,4 @@
-<app-top-bar></app-top-bar>
-<router-outlet></router-outlet>
+<div class="dark-bg h-full scroll scroll-x">
+  <app-top-bar></app-top-bar>
+  <router-outlet></router-outlet>
+</div>
