--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -1,7 +1,11 @@
-<div class="main-bg flex align-center justify-spread pad-x-20 pad-y-15">
-  <span></span>
+<div class="main-bg flex align-center justify-spread pad-y-15">
+  <div class="pad-left-10">
+    <img class="pic-r" src="assets/not-zillow.png" />
+  </div>
   <span class="font-white bold font-xl">Not Zillow.com</span>
-  <button mat-button (click)="authService.logout()">
-    <span class="font-white">Sign Out</span>
-  </button>
+  <div class="margin-right-10 flex align-center">
+    <button mat-button (click)="authService.logout()">
+      <span class="font-white">Sign Out</span>
+    </button>
+  </div>
 </div>
