--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,6 +32,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     flex-direction: row;
 }
 
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
 .align-center {
     align-items: center;
 }
@@ -42,6 +46,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .w-full {
     width: 100%;
+}
+
+.font-s {
+    font-size: 14px;
 }
 
 .font-l {
@@ -85,7 +93,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .main-bg {
-    background-color: rgb(14, 124, 158);
+    background-color: rgb(0, 106, 255);
+}
+
+.dark-bg {
+    background-color: rgb(32, 32, 32);
+}
+
+.pointer {
+    cursor: pointer;
 }
 
 @mixin generate-spacing ($upper-limit) {
