--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -1,6 +1,6 @@
-<div class="main-bg flex align-center justify-spread pad-y-15">
+<div class="main-bg flex align-center justify-spread pad-y-5">
   <div class="pad-left-10">
-    <img class="pic-r" src="assets/not-zillow.png" />
+    <img (click)="goHome()" class="pointer pic-r" src="assets/not-zillow.png" />
   </div>
   <span class="font-white bold font-xl">Not Zillow.com</span>
   <div class="margin-right-10 flex align-center">
