--- a/src/styles.scss
+++ b/src/styles.scss
@@ -100,6 +100,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     background-color: rgb(32, 32, 32);
 }
 
+.white-bg {
+    background-color: white;
+}
+
 .pointer {
     cursor: pointer;
 }
