--- a/src/app/components/property-detail/property-detail.component.scss
+++ b/src/app/components/property-detail/property-detail.component.scss
@@ -6,3 +6,10 @@
 .border {
   border-radius: 10px;
 }
+
+.edit-button {
+  cursor: pointer;
+  transform: scale(.8);
+  padding-left: 3px;
+  padding-bottom: 6px;
+}
