--- a/src/app/components/dialog/edit-layout/edit-layout.component.html
+++ b/src/app/components/dialog/edit-layout/edit-layout.component.html
@@ -37,10 +37,11 @@
   <mat-dialog-actions class="flex">
     <button class="flex-1" mat-button (click)="onNoClick()">Cancel</button>
     <button
-      class="flex-1"
+      class="flex-1 save-button"
       mat-button
       [mat-dialog-close]="layoutForm"
       cdkFocusInitial
+      [disabled]="!layoutForm.valid"
     >
       Save
     </button>
