--- a/src/app/components/dialog/edit-seller/edit-seller.component.html
+++ b/src/app/components/dialog/edit-seller/edit-seller.component.html
@@ -1,1 +1,41 @@
-<p>edit-seller works!</p>
+<div class="size">
+  <div class="justify-center flex">
+    <h2 mat-dialog-title>Editing Seller</h2>
+  </div>
+  <mat-dialog-content>
+    <form [formGroup]="sellerForm">
+      <div class="flex flex-col">
+        <mat-form-field>
+          <mat-label>Seller Name</mat-label>
+          <input matInput formControlName="name" />
+          <mat-error *ngIf="sellerForm.controls['name'].errors as error">
+            <span *ngIf="error['required']">Name is required</span>
+            <span *ngIf="error['pattern']">Invalid Name</span>
+          </mat-error>
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Phone Number</mat-label>
+          <input matInput formControlName="phone" />
+          <mat-error *ngIf="sellerForm.controls['phone'].errors as error">
+            <span *ngIf="error['required']">Phone Number is required</span>
+            <span *ngIf="error['pattern']">
+              Phone Number must follow format "555-123-4567"
+            </span>
+          </mat-error>
+        </mat-form-field>
+      </div>
+    </form>
+  </mat-dialog-content>
+  <mat-dialog-actions class="flex">
+    <button class="flex-1" mat-button (click)="onNoClick()">Cancel</button>
+    <button
+      class="flex-1 save-button"
+      mat-flat-button
+      [mat-dialog-close]="sellerForm"
+      cdkFocusInitial
+      [disabled]="!sellerForm.valid"
+    >
+      Save
+    </button>
+  </mat-dialog-actions>
+</div>
