--- a/src/app/components/dialog/edit-seller/edit-seller.component.html
+++ b/src/app/components/dialog/edit-seller/edit-seller.component.html
@@ -29,7 +29,7 @@
   <mat-dialog-actions class="flex">
     <button class="flex-1" mat-button (click)="onNoClick()">Cancel</button>
     <button
-      class="flex-1 save-button"
+      class="flex-1"
       mat-flat-button
       [mat-dialog-close]="sellerForm"
       cdkFocusInitial
