--- a/src/app/components/dialog/confirm-action/confirm-action.component.html
+++ b/src/app/components/dialog/confirm-action/confirm-action.component.html
@@ -1,16 +1,20 @@
 <mat-dialog-content>
-  <div class="margin-bot-10">
-    <span class="bold flex justify-center">Confirm Delete?</span>
+  <div class="margin-bot-5">
+    <span class="bold flex justify-center">Confirm Delete</span>
   </div>
   <div>
     <div class="flex justify-spread">
-      <button mat-flat-button (click)="onNoClick()" class="flex-1">
+      <button
+        mat-flat-button
+        (click)="onNoClick()"
+        class="flex-1 margin-right-2"
+      >
         Cancel
       </button>
       <button
         [mat-dialog-close]="true"
         mat-flat-button
-        class="flex-1 delete-button"
+        class="flex-1 delete-button margin-left-2"
       >
         Delete
       </button>
