--- a/src/app/components/dialog/edit-details/edit-details.component.html
+++ b/src/app/components/dialog/edit-details/edit-details.component.html
@@ -31,7 +31,12 @@
         </mat-form-field>
         <mat-form-field>
           <mat-label>State</mat-label>
-          <input matInput formControlName="state" />
+          <!-- <input matInput formControlName="state" /> -->
+          <mat-select formControlName="state">
+            @for (state of states; track state.name) {
+            <mat-option [value]="state.name">{{ state.name }}</mat-option>
+            }
+          </mat-select>
           <mat-error *ngIf="detailsForm.controls['state'].errors as error">
             <span *ngIf="error['required']">State is required</span>
           </mat-error>
@@ -42,8 +47,8 @@
   <mat-dialog-actions class="flex">
     <button class="flex-1" mat-button (click)="onNoClick()">Cancel</button>
     <button
-      class="flex-1 save-button"
-      mat-button
+      class="flex-1"
+      mat-flat-button
       [mat-dialog-close]="detailsForm"
       cdkFocusInitial
       [disabled]="!detailsForm.valid"
