--- a/src/app/components/property-list/property-list.component.html
+++ b/src/app/components/property-list/property-list.component.html
@@ -12,12 +12,12 @@
         <div class="flex align-center">
           <span class="bold">{{ p.bed }}</span>
           <span class="margin-left-3">bed</span>
-          <div class="pad-x-2">
+          <div class="pad-left-2 pad-right-3">
             <mat-divider class="divider" [vertical]="true"></mat-divider>
           </div>
           <span class="bold">{{ p.bath }}</span>
           <span class="margin-left-3">bath</span>
-          <div class="pad-x-2">
+          <div class="pad-left-2 pad-right-3">
             <mat-divider class="divider" [vertical]="true"></mat-divider>
           </div>
           <span class="bold">{{ p.sqFt }}</span>
