--- a/src/app/components/dialog/edit-layout/edit-layout.component.html
+++ b/src/app/components/dialog/edit-layout/edit-layout.component.html
@@ -7,7 +7,7 @@
       <div class="flex flex-col">
         <mat-form-field>
           <mat-label># Bedrooms</mat-label>
-          <input matInput formControlName="bed" />
+          <input type="number" matInput formControlName="bed" />
           <mat-error *ngIf="layoutForm.controls['bed'].errors as error">
             <span *ngIf="error['required']">Bed count is required</span>
             <span *ngIf="error['pattern']"> Bed count must be numeric </span>
@@ -15,7 +15,7 @@
         </mat-form-field>
         <mat-form-field>
           <mat-label># Bathrooms</mat-label>
-          <input matInput formControlName="bath" />
+          <input type="number" step=".5" matInput formControlName="bath" />
           <mat-error *ngIf="layoutForm.controls['bath'].errors as error">
             <span *ngIf="error['required']">Bath count is required</span>
             <span *ngIf="error['pattern']">
@@ -25,7 +25,7 @@
         </mat-form-field>
         <mat-form-field>
           <mat-label>Sq Feet</mat-label>
-          <input matInput formControlName="sqFt" />
+          <input type="number" step="100" matInput formControlName="sqFt" />
           <mat-error *ngIf="layoutForm.controls['sqFt'].errors as error">
             <span *ngIf="error['required']">Sq. Feet is required</span>
             <span *ngIf="error['pattern']"> Sq. Feet must be numeric </span>
