--- a/src/app/components/dialog/edit-details/edit-details.component.html
+++ b/src/app/components/dialog/edit-details/edit-details.component.html
@@ -37,7 +37,7 @@
           <mat-label>State</mat-label>
           <!-- <input matInput formControlName="state" /> -->
           <mat-select formControlName="state">
-            @for (state of states; track state.name) {
+            @for (state of states$ | async; track state.name) {
             <mat-option [value]="state.name">{{ state.name }}</mat-option>
             }
           </mat-select>
