--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,3 +1,3 @@
 <div class="h-full flex align-center justify-center">
-  <img class="size" src="{{ img }}" />
+  <img (click)="goHome()" class="pointer size" src="{{ img }}" />
 </div>
