--- a/src/app/components/property-list/property-list.component.html
+++ b/src/app/components/property-list/property-list.component.html
@@ -12,7 +12,7 @@
   <mat-card class="card-width margin-x-7 margin-y-10">
     <div class="pointer" (click)="navigate(p.id)">
       <div class="border">
-        <img class="border pic-size" src="{{ p.imgs[0] }}" />
+        <img class="border pic-size" src="{{ p.imgs ? p.imgs[0] : '' }}" />
       </div>
       <mat-card-content>
         <div class="margin-y-3">
@@ -39,8 +39,7 @@
         </div>
       </mat-card-content>
     </div>
-    @if(authService.isAdmin(permission$ | async) || p.createdBy == (user$ |
-    async)) {
+    @if(p.deletable) {
     <mat-card-footer>
       <div class="flex justify-center">
         <button
