Create new objects vs modifying existing ones

--- a/src/app/components/property-detail/property-detail.component.html
+++ b/src/app/components/property-detail/property-detail.component.html
@@ -11,8 +11,7 @@
       <div class="pad-x-8">
         <div class="flex align-center">
           <span class="bold font-l">Details</span>
-          @if(authService.isAdmin(permission$ | async) || property.createdBy ==
-          (user$ | async)) {
+          @if(property.editable) {
           <mat-icon (click)="editDetails(property)" class="edit-button"
             >edit</mat-icon
           >
@@ -34,8 +33,7 @@
       <div class="justify-left align-center pad-x-8">
         <div class="flex align-center">
           <span class="bold font-l">Layout</span>
-          @if(authService.isAdmin(permission$ | async) || property.createdBy ==
-          (user$ | async)) {
+          @if(property.editable) {
           <mat-icon (click)="editLayout(property)" class="edit-button"
             >edit</mat-icon
           >
@@ -66,8 +64,7 @@
       <div class="pad-x-8">
         <div class="flex align-center">
           <span class="bold font-l">Seller Info</span>
-          @if(authService.isAdmin(permission$ | async) || property.createdBy ==
-          (user$ | async)) {
+          @if(property.editable) {
           <mat-icon (click)="editSeller(property)" class="edit-button"
             >edit</mat-icon
           >
