--- a/src/app/components/property-list/property-list.component.html
+++ b/src/app/components/property-list/property-list.component.html
@@ -39,7 +39,7 @@
         </div>
       </mat-card-content>
     </div>
-    @if(p.deletable) {
+    @if(p.editable) {
     <mat-card-footer>
       <div class="flex justify-center">
         <button
